Criação página de pagamento

--- a/paginasPortugues/carrinho.html
+++ b/paginasPortugues/carrinho.html
@@ -147,7 +147,7 @@
         <li class="lista-menu"><a href="ocasioes.html" class="listaHover" data-translate="menu_ocasioes">Ocasiões</a></li>
         <li class="lista-menu"><a href="cestas.html" class="listaHover" data-translate="menu_cestas">Cestas</a></li>
         <li class="lista-menu"><a href="../index.html#promocaoProdutos" class="listaHover" data-translate="menu_promocoes">Promoções</a></li>
-        <li class="lista-menu"><a href="box.html" class="listaHover">Box</a></li>
+        <li class="lista-menu"><a href="box.html#box" class="listaHover">Box</a></li>
         </ul>
     </nav>
 
