--- a/paginasPortugues/pagamento.html
+++ b/paginasPortugues/pagamento.html
@@ -139,169 +139,183 @@
         </section>
         </div>
     </header>
+
     <!-- Menu de navegação global do site -->
     <nav class="navegacao">
         <ul class="menu">
         <li class="lista-menu"><a href="produtos.html" class="listaHover" data-translate="menu_produtos">Produtos</a></li>
         <li class="lista-menu"><a href="ocasioes.html" class="listaHover" data-translate="menu_ocasioes">Ocasiões</a></li>
-        <li class="lista-menu"><a href="cestas.html" class="listaMenuDark listaMenuLight" data-translate="menu_cestas">Cestas</a></li>
+        <li class="lista-menu"><a href="cestas.html" class="listaHover" data-translate="menu_cestas">Cestas</a></li>
         <li class="lista-menu"><a href="../index.html#promocaoProdutos" class="listaHover" data-translate="menu_promocoes">Promoções</a></li>
         <li class="lista-menu"><a href="box.html#box" class="listaHover">Box</a></li>
         </ul>
     </nav>
-    <!-- Página principal do website -->
+
     <main>
-        <section class="menuDepartamento">
-            <div>
-                <p  data-translate="texto-departamento">Departamento</p>
-            </div>
-            <ul>
-                <li class="listaMenu-departamento"><a href="produtos.html#Arranjo" data-translate="menu_arranjo">Arranjo</a></li>
-                <li class="listaMenu-departamento"><a href="produtos.html#buque" data-translate="menu_buque">Buquês</a></li>
-                <li class="listaMenu-departamento"><a href="produtos.html#buqueNoiva" data-translate="menu_buqueNoiva">Buquê Noivas</a></li>
-                <li class="listaMenu-departamento"><a href="#cestas" data-translate="menu_cestas">Cestas</a></li>
-                <li class="listaMenu-departamento"><a href="#complementos" data-translate="menu_complementos">Complementos</a></li>
-                <li class="listaMenu-departamento"><a href="#coroaFunibre" data-translate="menu_coroaFunibre">Coroa Fúnibres</a></li>
-                <li class="listaMenu-departamento"><a href="box.html#decoracao" data-translate="menu_decoracao">Decoração</a></li>
-                <li class="listaMenu-departamento"><a href="box.html#ramalhete" data-translate="menu_ramalhetes">Ramalhetes</a></li>
-                <li class="listaMenu-departamento"><a href="box.html#box">Box</a></li>
-            </ul>
-        </section>
 
-        <section class="secao-cestas">
-            <div class="titulo">
-                <p id="cestas"  data-translate="menu_cestas">Cestas</p>
-                <div class="linhaTexto-ocasioes"></div>
+        <section class="secao-resumoCompra">
+            <div class="textoResumoCompra">
+                <p>Resumo da compra</p>
             </div>
 
-            <div class="imagensGrid">
-                <div class="gridLinha">
-                    <div class="gridColuna">
-                        <img src="../img/imgCesta1.png">
+            <div class="caixaItens-resumoCompra">
+                <div class="linhaItens-resumoCompra">
+                    <img src="../img/Arranjo2.png">
+                    <div class="quantidadeItens">
+                        <p>Arranjo Selvagem</p>
+                        <p id="textoQuantidade-resumoCompra">Quantidade</p>
+                        <input type="number" value="1">
                     </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgCesta2.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgCesta3.png">
-                    </div>
-
+                    <p class="textoPreco-resumoCompra">R$ 306,85</p>
                 </div>
-
-                <div class="gridLinha">
-                    <div class="gridColuna">
-                        <img src="../img/imgCesta4.png">
+                <div class="linhaItens-resumoCompra">
+                    <img src="../img/Arranjo2.png">
+                    <div class="quantidadeItens">
+                        <p>Arranjo Selvagem</p>
+                        <p id="textoQuantidade-resumoCompra">Quantidade</p>
+                        <input type="number" value="1">
                     </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgCesta5.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgCesta6.png">
-                    </div>
+                    <p class="textoPreco-resumoCompra">R$ 306,85</p>
                 </div>
-
-            </div>
-        </section>
-
-        <section class="secao-complementos">
-            <div class="titulo">
-                <p id="complementos"  data-translate="menu_complementos">Complementos</p>
-                <div class="linhaTexto-ocasioes"></div>
-            </div>
-
-            <div class="imagensGrid">
-                <div class="gridLinha">
-                    <div class="gridColuna">
-                        <img src="../img/imgComp1.png">
+                <div class="linhaItens-resumoCompra">
+                    <img src="../img/Arranjo2.png">
+                    <div class="quantidadeItens">
+                        <p>Arranjo Selvagem</p>
+                        <p id="textoQuantidade-resumoCompra">Quantidade</p>
+                        <input type="number" value="1">
                     </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgComp2.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgComp3.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgComp4.png">
-                    </div>
-
+                    <p class="textoPreco-resumoCompra">R$ 306,85</p>
                 </div>
-
-                <div class="gridLinha">
-                    <div class="gridColuna">
-                        <img src="../img/imgComp5.png">
+                <div class="linhaItens-resumoCompra">
+                    <img src="../img/Arranjo2.png">
+                    <div class="quantidadeItens">
+                        <p>Arranjo Selvagem</p>
+                        <p id="textoQuantidade-resumoCompra">Quantidade</p>
+                        <input type="number" value="1">
                     </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgComp6.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgComp4.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgComp1.png">
-                    </div>
+                    <p class="textoPreco-resumoCompra">R$ 306,85</p>
                 </div>
-
-            </div>
-        </section>
-
-        <section class="secao-coroaFunibre">
-            <div class="titulo">
-                <p id="coroaFunibre" data-translate="menu_coroaFunibre">Coroas Funibres</p>
-                <div class="linhaTexto-ocasioes"></div>
-            </div>
-
-            <div class="imagensGrid">
-                <div class="gridLinha">
-                    <div class="gridColuna">
-                        <img src="../img/imgCoroa1.png">
+                <div class="linhaItens-resumoCompra">
+                    <img src="../img/Arranjo2.png">
+                    <div class="quantidadeItens">
+                        <p>Arranjo Selvagem</p>
+                        <p id="textoQuantidade-resumoCompra">Quantidade</p>
+                        <input type="number" value="1">
                     </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgCoroa2.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgCoroa3.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgCoroa4.png">
-                    </div>
-
+                    <p class="textoPreco-resumoCompra">R$ 306,85</p>
                 </div>
-
-                <div class="gridLinha">
-                    <div class="gridColuna">
-                        <img src="../img/imgCoroa5.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgCoroa6.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgCoroa7.png">
-                    </div>
-
-                    <div class="gridColuna">
-                        <img src="../img/imgCoroa8.png">
-                    </div>
-                </div>
-
             </div>
-        </section>
+            <div class="caixaPreco-resumoCompra">
+                <p>Frete Fixo</p>
+                <p>R$ 306,85</p>
+            </div>
+            <div class="caixaPreco-resumoCompra">
+                <p>Total</p>
+                <p>R$ 1.549,25</p>
+            </div>
         
+        </section>
+
+        <section class="secao-pagamento">
+            <div class="caixa-dados">
+                <div class="textoPagamento">
+                    <p data-translate="Dados">Dados</p>
+                </div>
+                <div class="linhaTexto-pagamento"></div>
+                <form class="formulario-dadosPagamento">
+                    <div>
+                        <label>Nome</label>
+                        <input type="text" id="nomePagamento">
+                    </div>
+
+                    <div>
+                        <label>Telefone</label>
+                        <input type="tel" id="telefonePagamento">
+                    </div>
+                </form>
+            </div>
+
+            <div class="caixa-entrega">
+                <div class="textoPagamento">
+                    <p data-translate="Entrega">Entrega</p>
+                </div>
+                <div class="linhaTexto-pagamento"></div>
+                <form class="formulario-entregaPagamento">
+                    <container class="caixa-linhaPagamento">
+                        <div>
+                            <label>CEP</label>
+                            <input type="text" id="cepPagamento">
+                        </div>
+                        <div>
+                            <label>Cidade</label>
+                            <input type="tel" id="cidadePagamento">
+                        </div>
+                    </container>    
+                    <container class="caixa-linhaPagamento">
+                        <div>
+                            <label>Bairro</label>
+                            <input type="text" id="bairroPagamento">
+                        </div>
+                        <div>
+                            <label>Rua</label>
+                            <input type="text" id="ruaPagamento">
+                        </div>
+                    </container>   
+                    <container class="caixa-linhaPagamento">
+                        <div>
+                            <label>Número</label>
+                            <input type="text" id="numeroPagamento">
+                        </div>
+                        <div>
+                            <label>Complemento</label>
+                            <input type="text" id="complementoPagamento">
+                        </div>
+                    </container>    
+                    <container class="caixa-linhaPagamento">
+                        <div>
+                            <label>Data</label>
+                            <input type="date" id="dataPagamento">
+                        </div>
+                        <div>
+                            <label>Horário</label>
+                            <input type="datetime" id="HorarioPagamento">
+                        </div>
+                    </container>    
+                </form>
+            </div>
+
+            <div class="caixa-formasPagamento">
+                <div class="textoPagamento">
+                    <p data-translate="formasPagamento">Pagamento</p>
+                </div>
+                <div class="linhaTexto-pagamento"></div>
+                <div class="formasPagamento-itens">
+                    <div class="caixaRadio-pagamento">
+                        <input type="radio">
+                        <img src="../img/icon/iconeDinheiro.png">
+                        <p>Dinheiro</p>
+                    </div>
+                    <div class="caixaRadio-pagamento">
+                        <input type="radio">
+                        <img src="../img/icon/iconePix.png">
+                        <p>Pix</p>
+                    </div>
+                    <div class="caixaRadio-pagamento">
+                        <input type="radio">
+                        <img src="../img/icon/iconeCartão.png">
+                        <p>Cartão</p>
+                    </div>
+                    <div class="caixaRadio-pagamento">
+                        <input type="radio">
+                        <img src="../img/icon/iconeBoleto.png">
+                        <p>Boleto</p>
+                    </div>
+                </div>
+                <button id="finalizarCompra-formasPagamento">Finalizar Compra</button>
+            </div>
+        </section>
     </main>
+
     <!-- Rodapé do website -->
     <footer class="rodape">
         <div class="iconeTelefone">
@@ -321,7 +335,6 @@
     <!-- Importação do Script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="../js/modoDarkProdutos.js"></script>
     <script src="https://kit.fontawesome.com/8df296b2be.js" crossorigin="anonymous"></script>
     <script src="../js/fontSizeProdutos.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
