--- a/paginasPortugues/produtos.html
+++ b/paginasPortugues/produtos.html
@@ -146,7 +146,7 @@
         <li class="lista-menu"><a href="ocasioes.html" class="listaHover" data-translate="menu_ocasioes">Ocasiões</a></li>
         <li class="lista-menu"><a href="cestas.html" class="listaHover" data-translate="menu_cestas">Cestas</a></li>
         <li class="lista-menu"><a href="../index.html#promocaoProdutos" class="listaHover" data-translate="menu_promocoes">Promoções</a></li>
-        <li class="lista-menu"><a href="box.html" class="listaHover" data-translate="menu_box">Box</a></li>
+        <li class="lista-menu"><a href="box.html#box" class="listaHover" data-translate="menu_box">Box</a></li>
         </ul>
     </nav>
 
