Link href nas imagens e botões

--- a/paginasPortugues/carrinho.html
+++ b/paginasPortugues/carrinho.html
@@ -298,38 +298,38 @@
             <div class="imagensSecaoTalvezGoste">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/Buque3.png">
+                       <a href="detalhesProdutos.html"> <img src="../img/Buque3.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Arranjo6.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/Arranjo6.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/caminho de mesa 3.jpg">
+                        <a href="detalhesProdutos.html"> <img src="../img/caminho de mesa 3.jpg"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva5.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/BuqueNoiva5.png"> </a>
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgBuquêChampagne.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgBuquêChampagne.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/box tropical 2.jpeg">
+                        <a href="detalhesProdutos.html"> <img src="../img/box tropical 2.jpeg"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque6.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/Buque6.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgComp5.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgComp5.png"> </a>
                     </div>
 
                 </div>
