--- a/paginasPortugues/cestas.html
+++ b/paginasPortugues/cestas.html
@@ -177,30 +177,30 @@
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgCesta1.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCesta1.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCesta2.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCesta2.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCesta3.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgCesta3.png"> </a>
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgCesta4.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCesta4.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCesta5.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgCesta5.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCesta6.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCesta6.png"> </a>
                     </div>
                 </div>
 
@@ -216,38 +216,38 @@
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgComp1.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgComp1.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgComp2.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgComp2.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgComp3.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgComp3.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgComp4.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgComp4.png"> </a>
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgComp5.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgComp5.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgComp6.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgComp6.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgComp4.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgComp4.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgComp1.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgComp1.png"> </a>
                     </div>
                 </div>
 
@@ -263,38 +263,38 @@
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgCoroa1.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgCoroa1.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCoroa2.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCoroa2.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCoroa3.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgCoroa3.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCoroa4.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgCoroa4.png"> </a>
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgCoroa5.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgCoroa5.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCoroa6.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCoroa6.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCoroa7.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCoroa7.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCoroa8.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCoroa8.png"> </a>
                     </div>
                 </div>
 
