--- a/paginasPortugues/ocasioes.html
+++ b/paginasPortugues/ocasioes.html
@@ -179,30 +179,30 @@
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgNamorados1.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgNamorados1.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgNamorados2.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgNamorados2.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgNamorados3.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgNamorados3.png"> </a>
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgNamorados4.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgNamorados4.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgNamorados5.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgNamorados5.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgNamorados6.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgNamorados6.png"> </a>
                     </div>
                 </div>
 
@@ -218,38 +218,38 @@
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgCasamento1.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgCasamento1.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgNamorados6.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgNamorados6.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCasamento3.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCasamento3.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCasamento4.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCasamento4.png"> </a>
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgCasamento5.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgCasamento5.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCasamento6.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCasamento6.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCasamento7.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCasamento7.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgCasamento8.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgCasamento8.png"> </a>
                     </div>
                 </div>
 
@@ -265,38 +265,38 @@
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgAniversario1.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgAniversario1.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgAniversario2.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgAniversario2.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgAniversario3.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgAniversario3.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgAniversario4.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgAniversario4.png"> </a>
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/imgAniversario5.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgAniversario5.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgAniversario6.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgAniversario6.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgAniversario7.png">
+                        <a href="detalhesProdutos.html">  <img src="../img/imgAniversario7.png"> </a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/imgAniversario8.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/imgAniversario8.png"> </a>
                     </div>
                 </div>
 
