--- a/paginasPortugues/produtos.html
+++ b/paginasPortugues/produtos.html
@@ -177,30 +177,30 @@
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/Arranjo1.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Arranjo1.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Arranjo2.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Arranjo2.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Arranjo3.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Arranjo3.png"></a>
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/Arranjo4.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Arranjo4.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Arranjo5.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Arranjo5.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Arranjo6.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Arranjo6.png"></a>
                     </div>
                 </div>
 
@@ -216,38 +216,38 @@
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/Buque1.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Buque1.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque2.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Buque2.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque3.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Buque3.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque3.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Buque3.png"></a>
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/Buque4.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Buque4.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque5.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Buque5.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque6.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Buque6.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque2.png">
+                        <a href="detalhesProdutos.html"><img src="../img/Buque2.png"></a>
                     </div>
                 </div>
 
@@ -263,38 +263,38 @@
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva1.png">
+                        <a href="detalhesProdutos.html"><img src="../img/BuqueNoiva1.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva7.png">
+                        <a href="detalhesProdutos.html"><img src="../img/BuqueNoiva7.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva3.png">
+                        <a href="detalhesProdutos.html"><img src="../img/BuqueNoiva3.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva4.png">
+                        <a href="detalhesProdutos.html"><img src="../img/BuqueNoiva4.png"></a>
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva5.png">
+                        <a href="detalhesProdutos.html"><img src="../img/BuqueNoiva5.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva6.png">
+                        <a href="detalhesProdutos.html"><img src="../img/BuqueNoiva6.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva7.png">
+                       <a href="detalhesProdutos.html"> <img src="../img/BuqueNoiva7.png"></a>
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva4.png">
+                        <a href="detalhesProdutos.html"> <img src="../img/BuqueNoiva4.png"></a>
                     </div>
                 </div>
 
